Fix margins on mobile
They were W I D E before

--- a/support/web/css/default.scss
+++ b/support/web/css/default.scss
@@ -74,9 +74,6 @@ main {
   margin: 0px auto 0px auto;
   flex: 1 0 auto;
 
-  padding: 3rem;
-  padding-top: $nav-height;
-
   box-sizing: border-box;
 
   div#post-toc-container {
